<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_all"
        android:title="@string/publications_category_all"
        android:icon="@android:drawable/ic_lock_idle_alarm"/>
    <item android:id="@+id/bottom_navigation_parties"
        android:title="@string/publications_category_parties"
        android:icon="@drawable/abc_vector_test" />
    <item
        android:id="@+id/bottom_navigation_books"
        android:title="@string/publications_category_books"
        android:icon="@android:drawable/ic_lock_idle_alarm"/>
    <item android:id="@+id/bottom_navigation_classes"
        android:title="@string/publications_category_classes"
        android:icon="@drawable/abc_vector_test" />
    <item
        android:id="@+id/bottom_navigation_confesions"
        android:title="@string/publications_category_confesions"
        android:icon="@android:drawable/ic_lock_idle_alarm"/>
</menu>

